Fix Menu Bottom Icon Not Centered

--- a/Blazor_Foundation_6_Lib/wwwroot/css/bf6_rtl.css
+++ b/Blazor_Foundation_6_Lib/wwwroot/css/bf6_rtl.css
@@ -8576,6 +8576,12 @@ textarea[readonly] {
           align-items: center;
 }
 
+.menu.icon-bottom li a {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 body {
   background: var(--body-bg-color);
   color: var(--body-ft-color);
